added jlink to hello-scala example